# UdaciMed

./: README.md  pyproject.toml
notebooks/: 01_baseline_analysis.ipynb  02_architecture_optimization.ipynb  03_deployment_acceleration.ipynb
results/: baseline_results.pkl  optimization_results_resnet18_interp_removal_dw_sep.pkl
results/onnx_models/: udacimed_pneumonia_optimized.onnx
utils/: architecture_optimization.py  model.py
