[project]
name = "udacimed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fvcore>=0.1.5",
    "gputil>=1.3.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "markdown>=3.3.0",
    "matplotlib>=3.5.0",
    "medmnist>=2.1.2",
    "numpy>=1.20.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "tensorboard>=2.5.0",
    "tensorrt-cu12==10.0.1",
    "thop>=0.0.31",
    "torch==2.3.0",
    "torchmetrics>=1.7.3",
    "torchsummary>=1.5.1",
    "torchvision>=0.18.0",
    "tqdm>=4.61.0",
]
